[tmux] Fix -- reattach-to-user-namespace

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@
 set-option -g default-terminal "xterm-256color"
 set-option -g escape-time 1
 if-shell '[ -z "$SSH_TTY" ] && [ -z "$SSH_CLIENT" ] && [ -z "$SSH_CONNECTION" ]' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s' '' 
-#if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh -"' ''
+if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh -"' ''
 set-option -g allow-rename off
 set-option -g history-limit 50000
 set-option -gs history-file "~/.tmux-history.log"
@@ -138,3 +138,5 @@ run '~/.tmux/plugins/tpm/tpm'
 bind @ break-pane
 set-option -g display-time 3000
 bind-key X confirm-before -p "Kill window #W? (y/n)" kill-window
+
+set -sa terminal-overrides ',*:ed@'
