--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -12,11 +12,11 @@ mpd_connection_timeout                = "5"
 playlist_disable_highlight_delay      = "3"
 allow_for_physical_item_deletion      = "yes"
 message_delay_time                    = "8"
-song_list_format                      = "{$2%a$2} {$5%t$5} $R {$3%b$3}   $6({$6%l})"
+song_list_format                      = "$(4){%t}$(4) $(white)- {%a}$(white) $(247){%b}$(247)   $(9)({%l})$(9)$(9)"
 song_status_format                    = "{$2%a$2} {$3%b$3} {$5%t$5}"
 song_library_format                   = "%t"
 song_window_title_format              = "{%a-%t}"
-song_columns_list_format              = "(37)[red]{a} (32)[green]{t} (25)[blue]{b} $R(7)[magenta]{l}"
+song_columns_list_format              = "(24)[white]{a} (38)[4]{t} (25)[247]{b} $R(7)[9]{l}"
 playlist_display_mode                 = "columns"
 browser_display_mode                  = "columns"
 titles_visibility                     = "yes"
@@ -30,24 +30,25 @@ ignore_leading_the                    = "no"
 enable_window_title                   = "yes"
 progressbar_look                      = "=>="
 user_interface                        = "alternative"
-alternative_header_first_line_format  = "{$b$2%a$9} {$5%t$9}"
-alternative_header_second_line_format = "{$3%b$9} {$4(%y)$9}"
-alternative_ui_separator_color        = "blue"
+#alternative_header_first_line_format  = "{$b$2%a$9} {$5%t$9}"
+alternative_header_first_line_format  = "$(9)─────┤$(end) $(green){$b%t$/b}$(end) $(9)├─────$(end)"
+alternative_header_second_line_format = "$(yellow){%a}$(end) $(white){%b}$(end) $(blue){(%y)}$(end)"
+alternative_ui_separator_color        = "yellow"
 playlist_separate_albums              = "no"
 colors_enabled                        = "yes"
 empty_tag_color                       = "blue"
 header_window_color                   = "white"
 display_volume_level                  = "yes"
 state_line_color                      = "cyan"
-state_flags_color                     = "magenta"
-main_window_color                     = "green"
-main_window_highlight_color           = "blue"
+state_flags_color                     = "yellow"
+main_window_color                     = "white"
+main_window_highlight_color           = "white"
 color1                                = "white"
 color2                                = "blue"
 progressbar_color                     = "black"
-statusbar_color                       = "cyan"
-active_column_color                   = "red"
-window_border_color                   = "red"
-active_window_border                  = "red"
+statusbar_color                       = "green"
+active_column_color                   = "yellow"
+window_border_color                   = "magenta"
+active_window_border                  = "green"
 follow_now_playing_lyrics             = "yes"
 clock_display_seconds                 = "yes"
