Now playing in status-right
Pulls from  MPD server or Google Play Music Desktop Player.app, in that
order.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -66,7 +66,7 @@ bind Enter copy-mode
 
 
 # Basic styles
-set -g status-interval 10
+set -g status-interval 5
 set -g status-bg default
 set -g pane-active-border-fg colour42
 set -g pane-active-border-fg yellow
@@ -93,11 +93,13 @@ setw -g window-status-separator "  "
 setw -g status-left \
   '#[bold]#{?client_prefix,#[bg=green],#[bg=default]}#{?client_prefix,#[fg=colour232],#[fg=yellow]} #{session_name} #[default,bold]#{?client_prefix,#[fg=green],#[fg=yellow]}>>  '
 
+
 #setw -g status-right '#[bg=yellow,fg=colour232]#{?pane_synchronized, ↔ ,}#[default]#[bg=cyan,fg=colour232]#{?window_zoomed_flag, ● ,}#[default]'
 
 set -sg pane-border-format \
   '#{?pane_active,#[reverse],#[fg=green]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{pane_title} #[default]]'
 
+setw -g status-right '#[fg=green]#(gpmdp-tmux 2>/dev/null)#[default]'
 
 #bind-key C-s send-prefix
 
@@ -128,7 +130,7 @@ set -g display-panes-time 3000
 set -g clock-mode-colour colour29
 
 set -g status-left-length 100
-set -g status-right-length 80
+set -g status-right-length 100
 
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 
