[ncmpcpp] "Deep Purple" theme

--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -9,14 +9,14 @@ mpd_connection_timeout                = "5"
 #visualizer_type                       = "spectrum"
 #visualizer_color                      = "magenta"
 #visualizer_look                       = "▬▬"
-playlist_disable_highlight_delay      = "3"
+playlist_disable_highlight_delay      = "0"
 allow_for_physical_item_deletion      = "yes"
-message_delay_time                    = "8"
-song_list_format                      = "$(4){%t}$(4) $(white)- {%a}$(white) $(247){%b}$(247)   $(9)({%l})$(9)$(9)"
+message_delay_time                    = "5"
+song_list_format                      = "$(162){%t}$(162) $(white)- {%a}$(white) $(247){%b}$(247)   $(9)({%l})$(9)$(9)"
 song_status_format                    = "{$2%a$2} {$3%b$3} {$5%t$5}"
 song_library_format                   = "%t"
 song_window_title_format              = "{%a-%t}"
-song_columns_list_format              = "(24)[white]{a} (38)[4]{t} (25)[247]{b} $R(7)[9]{l}"
+song_columns_list_format              = "(24)[white]{a} (38)[162]{t} (25)[247]{b} $R(7)[9]{l}"
 playlist_display_mode                 = "columns"
 browser_display_mode                  = "columns"
 titles_visibility                     = "yes"
@@ -31,24 +31,29 @@ enable_window_title                   = "yes"
 progressbar_look                      = "=>="
 user_interface                        = "alternative"
 #alternative_header_first_line_format  = "{$b$2%a$9} {$5%t$9}"
-alternative_header_first_line_format  = "$(9)─────┤$(end) $(green){$b%t$/b}$(end) $(9)├─────$(end)"
-alternative_header_second_line_format = "$(yellow){%a}$(end) $(white){%b}$(end) $(blue){(%y)}$(end)"
-alternative_ui_separator_color        = "yellow"
-playlist_separate_albums              = "no"
+alternative_header_first_line_format  = "$(9)─────┤$(end) $(17){$b%t$/b}$(end) $(9)├─────$(end)"
+alternative_header_second_line_format = "$(17){%a}$(end) $(17){%b}$(end) $(162){(%y)}$(end)"
+alternative_ui_separator_color        = "162"
+playlist_separate_albums              = "yes"
 colors_enabled                        = "yes"
-empty_tag_color                       = "blue"
+empty_tag_color                       = "111"
 header_window_color                   = "white"
 display_volume_level                  = "yes"
 state_line_color                      = "cyan"
-state_flags_color                     = "yellow"
+state_flags_color                     = "110"
 main_window_color                     = "white"
-main_window_highlight_color           = "white"
-color1                                = "white"
-color2                                = "blue"
+main_window_highlight_color           = "162"
+color1                                = "162"
+color2                                = "17"
 progressbar_color                     = "black"
-statusbar_color                       = "green"
-active_column_color                   = "yellow"
-window_border_color                   = "magenta"
-active_window_border                  = "green"
+progressbar_elapsed_color             = "17"
+statusbar_color                       = "17"
+#active_column_color                   = "90"
+active_column_color                   = "162"
+#window_border_color                   = "162"
+active_window_border                  = "17"
 follow_now_playing_lyrics             = "yes"
+#now_playing_prefix                    = ">> "
+#now_playing_suffix                    = " <<"
 clock_display_seconds                 = "yes"
+browser_playlist_prefix               = "$(17)[playlist]$(end) "
