--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,242 +1,248 @@
-tap 'caskroom/cask'
-tap 'caskroom/drivers'
-tap 'caskroom/fonts'
-tap 'caskroom/versions'
-tap 'd12frosted/emacs-plus'
-tap 'homebrew/bundle'
-tap 'homebrew/completions'
-tap 'homebrew/core'
-tap 'homebrew/fuse'
-tap 'homebrew/php'
-tap 'homebrew/services'
-tap 'manifoldco/brew'
-tap 'mkdryden/misc'
-tap 'neovim/neovim'
-tap 'rogual/neovim-dot-app'
-cask 'java'
-cask 'osxfuse'
-brew 'oniguruma'
-brew 'jq'
-brew 'ansiweather'
-brew 'archey'
-brew 'autoconf'
-brew 'automake'
-brew 'bfg'
-brew 'boost'
-brew 'freetype'
-brew 'fontconfig'
-brew 'gettext'
-brew 'pixman'
-brew 'cairo'
-brew 'coreutils'
-brew 'cowsay'
-brew 'cscope'
-brew 'ctags'
-brew 'curl'
-brew 'diff-so-fancy'
-brew 'libgpg-error'
-brew 'libassuan'
-brew 'libgcrypt'
-brew 'libksba'
-brew 'pth'
-brew 'dirmngr'
-brew 'dnsmasq'
-brew 'dos2unix'
-brew 'git'
-brew 'drafter', args: ['HEAD']
-brew 'duck'
-brew 'exiftool'
-brew 'faac'
-brew 'fasd'
-brew 'figlet'
-brew 'pcre2'
-brew 'fish'
-brew 'fortune'
-brew 'fpp'
-brew 'freetds', args: ['with-unixodbc']
-brew 'fswatch'
-brew 'fzf'
-brew 'gdbm'
-brew 'sqlite'
-brew 'python'
-brew 'jpeg'
-brew 'gifsicle'
-brew 'git-extras'
-brew 'git-lfs'
-brew 'git-standup'
-brew 'gmp'
-brew 'libtasn1'
-brew 'libunistring'
-brew 'nettle'
-brew 'libusb'
-brew 'pinentry'
-brew 'gnupg'
-brew 'gpg-agent'
-brew 'libtool'
-brew 'graphicsmagick'
-brew 'icu4c'
-brew 'heroku'
-brew 'lua'
-brew 'highlight'
-brew 'htop-osx'
-brew 'httpie'
-brew 'hub'
-brew 'imagemagick'
-brew 'ispell'
-brew 'jhead'
-brew 'jid'
-brew 'jmeter'
-brew 'jrnl'
-brew 'lame'
-brew 'x264'
-brew 'xvid'
-brew 'libav'
-brew 'libevent'
-brew 'libtermkey'
-brew 'libusb-compat'
-brew 'libuv'
-brew 'libvterm'
-brew 'libxml2'
-brew 'lolcat'
-brew 'lorem'
-brew 'lzo'
-brew 'markdown'
-brew 'mhash'
-brew 'mcrypt'
-brew 'mobile-shell'
-brew 'moreutils', args: ['without-parallel']
-brew 'msgpack'
-brew 'tokyo-cabinet'
-brew 'mutt'
-brew 'mycli'
-brew 'mysql'
-brew 'node'
-brew 'nodenv'
-brew 'openvpn'
-brew 'pandoc'
-brew 'parallel'
-brew 'pinentry-mac'
-brew 'postgresql'
-brew 'pv'
-brew 'pyenv'
-brew 'pyenv-virtualenv'
-brew 'ranger'
-brew 'ruby-build'
-brew 'rbenv'
-brew 're2c'
-brew 'reattach-to-user-namespace'
-brew 'scons'
-brew 'screenfetch'
-brew 'source-highlight'
-brew 'speedtest_cli'
-brew 'ssh-copy-id'
-brew 'sshfs'
-brew 'subliminal'
-brew 'the_silver_searcher'
-brew 'tig'
-brew 'tmux'
-brew 'transmission'
-brew 'tree'
-brew 'tty-clock'
-brew 'unibilium'
-brew 'unison'
-brew 'unixodbc'
-brew 'utf8proc'
-brew 'vagrant-completion'
-brew 'vault'
-brew 'watch'
-brew 'watchman', args: ['HEAD']
-brew 'wget'
-brew 'youtube-dl'
-brew 'zplug'
-brew 'zsh'
-brew 'zsh-completions'
-brew 'zsh-lovers'
-brew 'd12frosted/emacs-plus/emacs-plus'
-brew 'homebrew/php/composer'
-brew 'homebrew/php/phpbrew'
-brew 'homebrew/php/terminus'
-brew 'manifoldco/brew/torus'
-brew 'mkdryden/misc/namei'
-brew 'neovim/neovim/neovim'
-cask '1password'
-cask 'adobe-reader'
-cask 'airdroid'
-cask 'alfred'
-cask 'android-sdk'
-cask 'android-studio'
-cask 'appcleaner'
-cask 'atom'
-cask 'bartender'
-cask 'beamer'
-cask 'beardedspice'
-cask 'bettertouchtool'
-cask 'camtasia'
-cask 'caption'
-cask 'coconutbattery'
-cask 'colorpicker-skalacolor'
-cask 'cyberduck'
-cask 'daisydisk'
-cask 'discord'
-cask 'docker'
-cask 'dropbox'
-cask 'endurance'
-cask 'fantastical'
-cask 'firefox'
-cask 'fitbit-connect'
-cask 'flash-player'
-cask 'flux'
-cask 'font-fira-code'
-cask 'font-fira-mono'
-cask 'font-hack'
-cask 'forklift'
-cask 'genymotion'
-cask 'gitbook-editor'
-cask 'github-desktop'
-cask 'goofy'
-cask 'google-chrome'
-cask 'google-chrome-canary'
-cask 'google-drive'
-cask 'google-play-music-desktop-player'
-cask 'gpgtools'
-cask 'hammerspoon'
-cask 'iina'
-cask 'intellij-idea-ce'
-cask 'istat-menus'
-cask 'iterm2-beta'
-cask 'iterm2-nightly'
-cask 'jetbrains-toolbox'
-cask 'karabiner'
-cask 'keybase'
-cask 'lacona'
-cask 'lastpass'
-cask 'launchbar'
-cask 'little-snitch'
-cask 'malwarebytes-anti-malware'
-cask 'micro-snitch'
-cask 'oversight'
-cask 'panda'
-cask 'paw'
-cask 'phpstorm'
-cask 'reactotron'
-cask 'rightfont'
-cask 'safari-technology-preview'
-cask 'sequel-pro'
-cask 'skype'
-cask 'spectacle'
-cask 'steam'
-cask 'the-unarchiver'
-cask 'thunderbird'
-cask 'torbrowser'
-cask 'transmission'
-cask 'unified-remote'
-cask 'vagrant'
-cask 'vanilla'
-cask 'vimr'
-cask 'virtualbox'
-cask 'visual-studio-code'
-cask 'vlc'
-cask 'vox'
-cask 'whatsapp'
-cask 'windscribe'
-cask 'wireshark'
+tap "caskroom/cask"
+tap "caskroom/drivers"
+tap "caskroom/fonts"
+tap "caskroom/versions"
+tap "d12frosted/emacs-plus"
+tap "homebrew/bundle"
+tap "homebrew/completions"
+tap "homebrew/core"
+tap "homebrew/fuse"
+tap "homebrew/php"
+tap "homebrew/services"
+tap "manifoldco/brew"
+tap "mkdryden/misc"
+tap "mopidy/mopidy"
+tap "neovim/neovim"
+tap "rogual/neovim-dot-app"
+cask "java"
+cask "osxfuse"
+brew "oniguruma"
+brew "jq"
+brew "ansiweather"
+brew "archey"
+brew "autoconf"
+brew "automake"
+brew "bfg"
+brew "boost"
+brew "fontconfig"
+brew "gettext"
+brew "pixman"
+brew "cairo"
+brew "lua"
+brew "cclive"
+brew "coreutils"
+brew "cowsay"
+brew "cscope"
+brew "ctags"
+brew "curl"
+brew "diff-so-fancy"
+brew "libgpg-error"
+brew "libassuan"
+brew "libgcrypt"
+brew "libksba"
+brew "pth"
+brew "dirmngr"
+brew "dnsmasq"
+brew "dos2unix"
+brew "git"
+brew "drafter", args: ["HEAD"]
+brew "duck"
+brew "exiftool"
+brew "faac"
+brew "fasd"
+brew "figlet"
+brew "pcre2"
+brew "fish"
+brew "fortune"
+brew "fpp"
+brew "freetds", args: ["with-unixodbc"]
+brew "fswatch"
+brew "fzf"
+brew "gdbm"
+brew "sqlite"
+brew "python"
+brew "jpeg"
+brew "gifsicle"
+brew "git-extras"
+brew "git-lfs"
+brew "git-standup"
+brew "gmp"
+brew "libtasn1"
+brew "libunistring"
+brew "nettle"
+brew "gnu-typist"
+brew "libusb"
+brew "pinentry"
+brew "gnupg"
+brew "gpg-agent"
+brew "libtool"
+brew "graphicsmagick"
+brew "icu4c"
+brew "heroku"
+brew "highlight"
+brew "htop-osx"
+brew "httpie"
+brew "hub"
+brew "imagemagick"
+brew "ispell"
+brew "jhead"
+brew "jid"
+brew "jmeter"
+brew "jrnl"
+brew "lame"
+brew "x264"
+brew "xvid"
+brew "libav"
+brew "libevent"
+brew "libtermkey"
+brew "libusb-compat"
+brew "libuv"
+brew "libvterm"
+brew "libxml2"
+brew "lolcat"
+brew "lorem"
+brew "lzo"
+brew "markdown"
+brew "mhash"
+brew "mcrypt"
+brew "mobile-shell"
+brew "moreutils", args: ["without-parallel"]
+brew "mpc"
+brew "msgpack"
+brew "tokyo-cabinet"
+brew "mutt"
+brew "mycli"
+brew "mysql"
+brew "ncmpcpp", args: ["with-clock", "with-outputs", "with-visualizer"]
+brew "node"
+brew "nodenv"
+brew "openvpn"
+brew "pandoc"
+brew "parallel"
+brew "pinentry-mac"
+brew "postgresql"
+brew "pv"
+brew "pyenv"
+brew "pyenv-virtualenv"
+brew "ranger"
+brew "ruby-build"
+brew "rbenv"
+brew "re2c"
+brew "reattach-to-user-namespace"
+brew "scons"
+brew "screenfetch"
+brew "source-highlight"
+brew "speedtest_cli"
+brew "ssh-copy-id"
+brew "sshfs"
+brew "subliminal"
+brew "the_silver_searcher"
+brew "tig"
+brew "tmux"
+brew "transmission"
+brew "tree"
+brew "tty-clock"
+brew "unibilium"
+brew "unison"
+brew "unixodbc"
+brew "utf8proc"
+brew "vagrant-completion"
+brew "vault"
+brew "watch"
+brew "watchman", args: ["HEAD"]
+brew "wget"
+brew "youtube-dl"
+brew "zplug"
+brew "zsh"
+brew "zsh-completions"
+brew "zsh-lovers"
+brew "d12frosted/emacs-plus/emacs-plus"
+brew "homebrew/php/composer"
+brew "homebrew/php/phpbrew"
+brew "homebrew/php/terminus"
+brew "manifoldco/brew/torus"
+brew "mkdryden/misc/namei"
+brew "neovim/neovim/neovim"
+cask "1password"
+cask "adobe-reader"
+cask "airdroid"
+cask "alfred"
+cask "android-sdk"
+cask "android-studio"
+cask "apache-directory-studio"
+cask "appcleaner"
+cask "atom"
+cask "bartender"
+cask "beamer"
+cask "beardedspice"
+cask "bettertouchtool"
+cask "camtasia"
+cask "caption"
+cask "coconutbattery"
+cask "colorpicker-skalacolor"
+cask "cyberduck"
+cask "daisydisk"
+cask "discord"
+cask "docker"
+cask "dropbox"
+cask "endurance"
+cask "fantastical"
+cask "firefox"
+cask "fitbit-connect"
+cask "flash-player"
+cask "flux"
+cask "font-fira-code"
+cask "font-fira-mono"
+cask "font-hack"
+cask "forklift"
+cask "genymotion"
+cask "gitbook-editor"
+cask "github-desktop"
+cask "goofy"
+cask "google-chrome"
+cask "google-chrome-canary"
+cask "google-drive"
+cask "google-play-music-desktop-player"
+cask "gpgtools"
+cask "hammerspoon"
+cask "iina"
+cask "intellij-idea-ce"
+cask "istat-menus"
+cask "iterm2-beta"
+cask "iterm2-nightly"
+cask "jetbrains-toolbox"
+cask "karabiner"
+cask "keybase"
+cask "lacona"
+cask "lastpass"
+cask "launchbar"
+cask "little-snitch"
+cask "malwarebytes-anti-malware"
+cask "micro-snitch"
+cask "ngrok"
+cask "oversight"
+cask "panda"
+cask "paw"
+cask "phpstorm"
+cask "reactotron"
+cask "rightfont"
+cask "safari-technology-preview"
+cask "sequel-pro"
+cask "skype"
+cask "spectacle"
+cask "steam"
+cask "the-unarchiver"
+cask "thunderbird"
+cask "torbrowser"
+cask "transmission"
+cask "unified-remote"
+cask "vagrant"
+cask "vanilla"
+cask "vimr"
+cask "virtualbox"
+cask "visual-studio-code"
+cask "vlc"
+cask "vox"
+cask "whatsapp"
+cask "windscribe"
+cask "wireshark"
