Open new tmux windows in current working directory

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,7 +23,7 @@ unbind !
 
 bind-key -r s select-pane -t :.+
 
-bind-key n new-window
+bind-key n new-window -c '#{pane_current_path}'
 
 # Navigation
 bind h select-pane -L
