--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -3,6 +3,7 @@ tap "caskroom/drivers"
 tap "caskroom/fonts"
 tap "caskroom/versions"
 tap "d12frosted/emacs-plus"
+tap "eugenmayer/dockersync"
 tap "homebrew/bundle"
 tap "homebrew/completions"
 tap "homebrew/core"
@@ -50,6 +51,10 @@ brew "duck"
 brew "exiftool"
 brew "faac"
 brew "fasd"
+brew "lame"
+brew "x264"
+brew "xvid"
+brew "ffmpeg"
 brew "figlet"
 brew "pcre2"
 brew "fish"
@@ -67,7 +72,6 @@ brew "git-extras"
 brew "git-lfs"
 brew "git-standup"
 brew "gmp"
-brew "libtasn1"
 brew "libunistring"
 brew "nettle"
 brew "gnu-typist"
@@ -89,9 +93,8 @@ brew "jhead"
 brew "jid"
 brew "jmeter"
 brew "jrnl"
-brew "lame"
-brew "x264"
-brew "xvid"
+brew "kubernetes-cli"
+brew "ldapvi"
 brew "libav"
 brew "libevent"
 brew "libtermkey"
@@ -131,6 +134,7 @@ brew "re2c"
 brew "reattach-to-user-namespace"
 brew "scons"
 brew "screenfetch"
+brew "siege"
 brew "source-highlight"
 brew "speedtest_cli"
 brew "ssh-copy-id"
@@ -143,7 +147,6 @@ brew "transmission"
 brew "tree"
 brew "tty-clock"
 brew "unibilium"
-brew "unison"
 brew "unixodbc"
 brew "utf8proc"
 brew "vagrant-completion"
@@ -157,6 +160,7 @@ brew "zsh"
 brew "zsh-completions"
 brew "zsh-lovers"
 brew "d12frosted/emacs-plus/emacs-plus"
+brew "eugenmayer/dockersync/unox"
 brew "homebrew/php/composer"
 brew "homebrew/php/phpbrew"
 brew "homebrew/php/terminus"
@@ -178,6 +182,7 @@ cask "beardedspice"
 cask "bettertouchtool"
 cask "camtasia"
 cask "caption"
+cask "cheatsheet"
 cask "coconutbattery"
 cask "colorpicker-skalacolor"
 cask "cyberduck"
@@ -204,6 +209,7 @@ cask "google-chrome-canary"
 cask "google-drive"
 cask "google-play-music-desktop-player"
 cask "gpgtools"
+cask "gravitdesigner"
 cask "hammerspoon"
 cask "iina"
 cask "intellij-idea-ce"
@@ -219,6 +225,7 @@ cask "launchbar"
 cask "little-snitch"
 cask "malwarebytes-anti-malware"
 cask "micro-snitch"
+cask "minikube"
 cask "ngrok"
 cask "oversight"
 cask "panda"
