--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -63,6 +63,7 @@ brew "fpp"
 brew "freetds", args: ["with-unixodbc"]
 brew "fswatch"
 brew "fzf"
+brew "gmp"
 brew "gdbm"
 brew "sqlite"
 brew "python"
@@ -71,7 +72,6 @@ brew "gifsicle"
 brew "git-extras"
 brew "git-lfs"
 brew "git-standup"
-brew "gmp"
 brew "libunistring"
 brew "nettle"
 brew "gnu-typist"
@@ -105,6 +105,7 @@ brew "libxml2"
 brew "lolcat"
 brew "lorem"
 brew "lzo"
+brew "magic-wormhole"
 brew "markdown"
 brew "mhash"
 brew "mcrypt"
@@ -117,6 +118,8 @@ brew "mutt"
 brew "mycli"
 brew "mysql"
 brew "ncmpcpp", args: ["with-clock", "with-outputs", "with-visualizer"]
+brew "unibilium"
+brew "neovim"
 brew "node"
 brew "nodenv"
 brew "openvpn"
@@ -143,17 +146,19 @@ brew "subliminal"
 brew "the_silver_searcher"
 brew "tig"
 brew "tmux"
+brew "translate-shell"
 brew "transmission"
 brew "tree"
 brew "tty-clock"
-brew "unibilium"
 brew "unixodbc"
 brew "utf8proc"
 brew "vagrant-completion"
 brew "vault"
+brew "w3m"
 brew "watch"
 brew "watchman", args: ["HEAD"]
 brew "wget"
+brew "wiki"
 brew "youtube-dl"
 brew "zplug"
 brew "zsh"
@@ -166,7 +171,6 @@ brew "homebrew/php/phpbrew"
 brew "homebrew/php/terminus"
 brew "manifoldco/brew/torus"
 brew "mkdryden/misc/namei"
-brew "neovim/neovim/neovim"
 cask "1password"
 cask "adobe-reader"
 cask "airdroid"
