--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,13 @@
 [submodule "zprezto"]
 	path = zsh/.zprezto
-	url = git@github.com:bezhermoso/prezto.git
+	url = https://git@github.com/bezhermoso/prezto.git
 	branch = master
 [submodule "base16-shell"]
 	path = base16-shell
-	url = git@github.com:bezhermoso/base16-shell.git
+	url = https://github.com/bezhermoso/base16-shell.git
 [submodule "org-article"]
 	path = emacs/org-article
 	url = git://github.com/tsdye/org-article.git
+[submodule "og-jira"]
+	path = spacemacs/layers/contrib/org-jira
+	url = https://github.com/baohaojun/org-jira.git
