tmux conditionals doesn't quite work well enough. Reverting.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,13 +46,20 @@ bind-key -r C-l resize-pane -R 5
 # Splitting
 bind \ split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
+bind | split-window -fh -c '#{pane_current_path}' -p 33
+bind _ split-window -fv -c '#{pane_current_path}' -p 33
 
 set-option -g -q mouse on
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
+
+
 # Copy mode
 setw -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 bind Enter copy-mode
 #bind Escape copy-mode
 #setw -g utf8 on
@@ -86,7 +93,11 @@ setw -g window-status-separator "  "
 setw -g status-left \
   '#[bold]#{?client_prefix,#[bg=green],#[bg=default]}#{?client_prefix,#[fg=colour232],#[fg=yellow]} #{session_name} #[default,bold]#{?client_prefix,#[fg=green],#[fg=yellow]}>>  '
 
+
 #setw -g status-right '#[bg=yellow,fg=colour232]#{?pane_synchronized, ↔ ,}#[default]#[bg=cyan,fg=colour232]#{?window_zoomed_flag, ● ,}#[default]'
+
+set -sg pane-border-format \
+  '#{?pane_active,#[reverse],#[fg=green]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{pane_title} #[default]]'
 
 setw -g status-right '#[fg=green]#(gpmdp-tmux 2>/dev/null)#[default]'
 
@@ -124,14 +135,10 @@ set -g status-right-length 100
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-if-shell '[ -f ~/.tmux/plugins/tpm/tpm ]' "run '~/.tmux/plugins/tpm/tpm"
+if-shell '[ -f ~/.tmux/plugins/tpm/tpm ]' "run '~/.tmux/plugins/tpm/tpm'"
 
 bind @ break-pane
 set-option -g display-time 3000
 bind-key X confirm-before -p "Kill window #W? (y/n)" kill-window
 
 set -sa terminal-overrides ',*:ed@'
-
-
-if-shell "[[ `tmux -V` == *2.5 ]]" "$HOME/.dotfiles/tmux/tmux-2.5.conf"
-if-shell '[ -n "$SSH_TTY" ]' "source-file $HOME/.dotfiles/tmux/tmux-ssh.conf"
