Update Brewfile with new & removed (+ renamed) formulae

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -23,9 +23,9 @@ brew "ansiweather"
 brew "archey"
 brew "autoconf"
 brew "automake"
+brew "bash"
 brew "bfg"
 brew "boost"
-brew "fontconfig"
 brew "gettext"
 brew "pixman"
 brew "cairo"
@@ -55,19 +55,17 @@ brew "lame"
 brew "x264"
 brew "xvid"
 brew "ffmpeg"
+brew "gmp"
 brew "figlet"
 brew "pcre2"
 brew "fish"
 brew "fortune"
 brew "fpp"
+brew "libtool"
 brew "freetds", args: ["with-unixodbc"]
 brew "fswatch"
 brew "fzf"
-brew "gmp"
 brew "gdbm"
-brew "sqlite"
-brew "python"
-brew "jpeg"
 brew "gifsicle"
 brew "git-extras"
 brew "git-lfs"
@@ -79,12 +77,12 @@ brew "libusb"
 brew "pinentry"
 brew "gnupg"
 brew "gpg-agent"
-brew "libtool"
 brew "graphicsmagick"
+brew "sqlite"
 brew "icu4c"
 brew "heroku"
 brew "highlight"
-brew "htop-osx"
+brew "htop"
 brew "httpie"
 brew "hub"
 brew "imagemagick"
@@ -109,19 +107,19 @@ brew "magic-wormhole"
 brew "markdown"
 brew "mhash"
 brew "mcrypt"
-brew "mobile-shell"
 brew "moreutils", args: ["without-parallel"]
+brew "mosh"
 brew "mpc"
 brew "msgpack"
 brew "tokyo-cabinet"
 brew "mutt"
 brew "mycli"
-brew "mysql"
+brew "mysql", restart_service: true
 brew "ncmpcpp", args: ["with-clock", "with-outputs", "with-visualizer"]
 brew "unibilium"
 brew "neovim"
-brew "node"
 brew "nodenv"
+brew "nzbget"
 brew "openvpn"
 brew "pandoc"
 brew "parallel"
@@ -135,11 +133,12 @@ brew "ruby-build"
 brew "rbenv"
 brew "re2c"
 brew "reattach-to-user-namespace"
+brew "ripgrep"
 brew "scons"
 brew "screenfetch"
 brew "siege"
 brew "source-highlight"
-brew "speedtest_cli"
+brew "speedtest-cli"
 brew "ssh-copy-id"
 brew "sshfs"
 brew "subliminal"
@@ -150,10 +149,12 @@ brew "translate-shell"
 brew "transmission"
 brew "tree"
 brew "tty-clock"
+brew "unison"
 brew "unixodbc"
 brew "utf8proc"
 brew "vagrant-completion"
 brew "vault"
+brew "vegeta"
 brew "w3m"
 brew "watch"
 brew "watchman", args: ["HEAD"]
@@ -164,7 +165,7 @@ brew "zplug"
 brew "zsh"
 brew "zsh-completions"
 brew "zsh-lovers"
-brew "d12frosted/emacs-plus/emacs-plus"
+brew "d12frosted/emacs-plus/emacs-plus", args: ["with-natural-title-bar"]
 brew "eugenmayer/dockersync/unox"
 brew "homebrew/php/composer"
 brew "homebrew/php/phpbrew"
@@ -197,29 +198,22 @@ cask "dropbox"
 cask "endurance"
 cask "fantastical"
 cask "firefox"
-cask "fitbit-connect"
 cask "flash-player"
 cask "flux"
-cask "font-fira-code"
-cask "font-fira-mono"
-cask "font-hack"
 cask "forklift"
 cask "genymotion"
 cask "gitbook-editor"
 cask "github-desktop"
 cask "goofy"
+cask "google-backup-and-sync"
 cask "google-chrome"
-cask "google-chrome-canary"
 cask "google-drive"
 cask "google-play-music-desktop-player"
-cask "gpgtools"
 cask "gravitdesigner"
 cask "hammerspoon"
 cask "iina"
 cask "intellij-idea-ce"
 cask "istat-menus"
-cask "iterm2-beta"
-cask "iterm2-nightly"
 cask "jetbrains-toolbox"
 cask "karabiner"
 cask "keybase"
@@ -231,13 +225,13 @@ cask "malwarebytes-anti-malware"
 cask "micro-snitch"
 cask "minikube"
 cask "ngrok"
+cask "opera"
 cask "oversight"
 cask "panda"
 cask "paw"
 cask "phpstorm"
 cask "reactotron"
 cask "rightfont"
-cask "safari-technology-preview"
 cask "sequel-pro"
 cask "skype"
 cask "spectacle"
@@ -246,6 +240,7 @@ cask "the-unarchiver"
 cask "thunderbird"
 cask "torbrowser"
 cask "transmission"
+cask "ubar"
 cask "unified-remote"
 cask "vagrant"
 cask "vanilla"
@@ -257,3 +252,11 @@ cask "vox"
 cask "whatsapp"
 cask "windscribe"
 cask "wireshark"
+cask "caskroom/drivers/fitbit-connect"
+cask "caskroom/fonts/font-fira-code"
+cask "caskroom/fonts/font-fira-mono"
+cask "caskroom/fonts/font-hack"
+cask "caskroom/versions/google-chrome-canary"
+cask "caskroom/versions/iterm2-beta"
+cask "caskroom/versions/iterm2-nightly"
+cask "caskroom/versions/safari-technology-preview"
