--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -123,6 +123,7 @@ brew "nzbget"
 brew "openvpn"
 brew "pandoc"
 brew "parallel"
+brew "pgcli"
 brew "pinentry-mac"
 brew "postgresql"
 brew "pv"
@@ -230,6 +231,7 @@ cask "oversight"
 cask "panda"
 cask "paw"
 cask "phpstorm"
+cask "pocket-casts"
 cask "reactotron"
 cask "rightfont"
 cask "sequel-pro"
