--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -169,6 +169,7 @@ brew "zsh-lovers"
 brew "d12frosted/emacs-plus/emacs-plus", args: ["with-natural-title-bar"]
 brew "eugenmayer/dockersync/unox"
 brew "homebrew/php/composer"
+brew "homebrew/php/php71"
 brew "homebrew/php/phpbrew"
 brew "homebrew/php/terminus"
 brew "manifoldco/brew/torus"
@@ -215,6 +216,7 @@ cask "hammerspoon"
 cask "iina"
 cask "intellij-idea-ce"
 cask "istat-menus"
+cask "iterm2"
 cask "jetbrains-toolbox"
 cask "karabiner"
 cask "keybase"
@@ -255,6 +257,7 @@ cask "whatsapp"
 cask "windscribe"
 cask "wireshark"
 cask "caskroom/drivers/fitbit-connect"
+cask "caskroom/fonts/font-droid-sans-mono"
 cask "caskroom/fonts/font-fira-code"
 cask "caskroom/fonts/font-fira-mono"
 cask "caskroom/fonts/font-hack"
