Homebrew: Update Homebrew manifest

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,20 +1,20 @@
-tap "caskroom/cask"
+tap "mopidy/mopidy"
+tap "eugenmayer/dockersync"
+tap "mkdryden/misc"
+tap "homebrew/fuse"
+tap "homebrew/completions"
+tap "homebrew/core"
+tap "homebrew/php"
+tap "homebrew/bundle"
+tap "homebrew/services"
+tap "d12frosted/emacs-plus"
+tap "rogual/neovim-dot-app"
 tap "caskroom/drivers"
 tap "caskroom/fonts"
 tap "caskroom/versions"
-tap "d12frosted/emacs-plus"
-tap "eugenmayer/dockersync"
-tap "homebrew/bundle"
-tap "homebrew/completions"
-tap "homebrew/core"
-tap "homebrew/fuse"
-tap "homebrew/php"
-tap "homebrew/services"
+tap "caskroom/cask"
 tap "manifoldco/brew"
-tap "mkdryden/misc"
-tap "mopidy/mopidy"
 tap "neovim/neovim"
-tap "rogual/neovim-dot-app"
 cask "java"
 cask "osxfuse"
 brew "oniguruma"
@@ -143,6 +143,7 @@ brew "speedtest-cli"
 brew "ssh-copy-id"
 brew "sshfs"
 brew "subliminal"
+brew "telnet"
 brew "the_silver_searcher"
 brew "tig"
 brew "tmux"
@@ -202,7 +203,6 @@ cask "fantastical"
 cask "firefox"
 cask "flash-player"
 cask "flux"
-cask "forklift"
 cask "genymotion"
 cask "gitbook-editor"
 cask "github-desktop"
@@ -219,6 +219,7 @@ cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
 cask "karabiner"
+cask "keepingyouawake"
 cask "keybase"
 cask "lacona"
 cask "lastpass"
