homebrew: update Brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -129,6 +129,7 @@ brew "postgresql"
 brew "pv"
 brew "pyenv"
 brew "pyenv-virtualenv"
+brew "qrencode"
 brew "ranger"
 brew "ruby-build"
 brew "rbenv"
