Switch to xterm-256color for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # vi:syntax=sh
 
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-256color"
 set-option -g escape-time 1
 if-shell '[ -z "$SSH_TTY" ] && [ -z "$SSH_CLIENT" ] && [ -z "$SSH_CONNECTION" ]' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s' '' 
 if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh -"' ''
