clipboard improvements in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,8 @@ set-option -g history-limit 50000
 set-option -gs history-file "~/.tmux-history.log"
 set-window-option -g xterm-keys on
 
+
+set-option -g repeat-time 1250
 unbind-key r
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
@@ -53,13 +55,15 @@ set-option -g -q mouse on
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
+#bind C-k clear-history
 
 
 # Copy mode
 setw -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 bind Enter copy-mode
 #bind Escape copy-mode
 #setw -g utf8 on
