MacOS Catalina + tmux 3.0a: remove reattach-to-user-namespace & fix bindings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@
 set-option -g default-terminal "xterm-256color"
 set-option -g escape-time 1
 if-shell '[ -z "$SSH_TTY" ] && [ -z "$SSH_CLIENT" ] && [ -z "$SSH_CONNECTION" ]' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s' '' 
-if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh -"' ''
+#if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh -"' ''
 set-option -g allow-rename off
 set-option -g history-limit 50000
 set-option -gs history-file "~/.tmux-history.log"
@@ -46,7 +46,7 @@ bind-key -r C-h resize-pane -L 5
 bind-key -r C-l resize-pane -R 5
 
 # Splitting
-bind \ split-window -h -c '#{pane_current_path}'
+bind \\ split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 bind | split-window -fh -c '#{pane_current_path}' -p 33
 bind _ split-window -fv -c '#{pane_current_path}' -p 33
@@ -55,15 +55,15 @@ set-option -g -q mouse on
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
-bind -n C-l send-keys -R; clear-history
+#bind -n C-l send-keys -R; clear-history
 
 
 # Copy mode
 setw -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe " pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy"
 bind Enter copy-mode
 #bind Escape copy-mode
 #setw -g utf8 on
@@ -72,9 +72,9 @@ bind Enter copy-mode
 # Basic styles
 set -g status-interval 5
 set -g status-bg default
-set -g pane-active-border-fg colour42
-set -g pane-active-border-fg yellow
-set -g pane-border-fg colour8
+#set -g pane-active-border-fg colour42
+#set -g pane-active-border-fg yellow
+#set -g pane-border-fg colour8
 #if-shell "[[ -n $TMUX_BORDER_FG ]]" 'set -g pane-border-fg $TMUX_BORDER_FG' ''
 #if-shell "[[ -n $TMUX_BG ]]" 'set -g status-bg $TMUX_BG' ''
 #if-shell "[[ -n $TMUX_BORDER_BG ]]" 'set -g pane-border-bg $TMUX_BORDER_BG' ''
