--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -55,7 +55,7 @@ set-option -g -q mouse on
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
-#bind -n C-l send-keys -R; clear-history
+bind -n C-l send-keys -R C-l \; clear-history
 
 
 # Copy mode
