tmux 2.3 config improvements + tmux-fzf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,7 @@
 # vi:syntax=sh
 
+TMUX_FZF_PREVIEW=0
+
 set-option -g default-terminal "xterm-256color"
 set-option -g escape-time 1
 if-shell '[ -z "$SSH_TTY" ] && [ -z "$SSH_CLIENT" ] && [ -z "$SSH_CONNECTION" ]' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s' '' 
@@ -71,7 +73,7 @@ bind Enter copy-mode
 
 # Basic styles
 set -g status-interval 5
-set -g status-bg default
+set -g status-bg black
 #set -g pane-active-border-fg colour42
 #set -g pane-active-border-fg yellow
 #set -g pane-border-fg colour8
@@ -97,11 +99,13 @@ setw -g window-status-separator "  "
 setw -g status-left \
   '#[bold]#{?client_prefix,#[bg=green],#[bg=default]}#{?client_prefix,#[fg=colour232],#[fg=yellow]} #{session_name} #[default,bold]#{?client_prefix,#[fg=green],#[fg=yellow]}>>  '
 
+setw -g pane-border-status top
 
 #setw -g status-right '#[bg=yellow,fg=colour232]#{?pane_synchronized, ↔ ,}#[default]#[bg=cyan,fg=colour232]#{?window_zoomed_flag, ● ,}#[default]'
 
+#setw -g pane-border-format '-'
 set -sg pane-border-format \
-  '#{?pane_active,#[reverse],#[fg=green]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{pane_title} #[default]]'
+  '#{?pane_active,#[reverse],#[fg=green]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{?pane_active,#[bold],}#{pane_current_command} | #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") #[default]]'
 
 setw -g status-right '#[fg=green]#(gpmdp-tmux 2>/dev/null)#[default]'
 
@@ -137,6 +141,7 @@ set -g status-left-length 100
 set -g status-right-length 100
 
 set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 if-shell '[ -f ~/.tmux/plugins/tpm/tpm ]' "run '~/.tmux/plugins/tpm/tpm'"
@@ -146,3 +151,5 @@ set-option -g display-time 3000
 bind-key X confirm-before -p "Kill window #W? (y/n)" kill-window
 
 set -sa terminal-overrides ',*:ed@'
+setw -g window-style fg=colour240
+setw -g window-active-style fg=white
