--- a/php/composer/composer.json
+++ b/php/composer/composer.json
@@ -1,10 +1,7 @@
 {
     "require": {
-        "drush/drush": "^8.1",
+        "php": "^8.2",
         "psy/psysh": "@stable",
-        "nikic/php-parser": "^1.2.1",
-        "mkusher/padawan": "^0.2.1",
-        "laravel/homestead": "~2.0",
-        "laravel/lumen-installer": "^1.0"
+        "nikic/php-parser": "^1.2.1"
     }
 }
