--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,13 +4,15 @@ TMUX_FZF_PREVIEW=0
 
 set-option -g default-terminal "xterm-256color"
 set-option -g escape-time 1
-if-shell '[ -z "$SSH_TTY" ] && [ -z "$SSH_CLIENT" ] && [ -z "$SSH_CONNECTION" ]' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s' '' 
+if-shell '[ -z "$SSH_TTY" ] && [ -z "$SSH_CLIENT" ] && [ -z "$SSH_CONNECTION" ]' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s' ''
 #if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh -"' ''
 set-option -g allow-rename off
 set-option -g history-limit 50000
 set-option -gs history-file "~/.tmux-history.log"
 set-window-option -g xterm-keys on
 
+# ALlows a few things for base16 theming to work better:
+set-option -g allow-passthrough on
 
 set-option -g repeat-time 1250
 unbind-key r
@@ -142,6 +144,7 @@ set -g status-right-length 100
 
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'tinted-theming/base16-tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 if-shell '[ -f ~/.tmux/plugins/tpm/tpm ]' "run '~/.tmux/plugins/tpm/tpm'"
