--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,2 +1,10 @@
-tmuxp==1.3.4
-pyenv==1.1.5
+cffi==1.15.1
+docutils==0.20.1
+gpg==1.21.0
+pycparser==2.21
+Pygments @ file:///private/tmp/pygments-20230630-5530-1s8evfm/Pygments-2.15.1
+python-slugify==8.0.1
+simple-websocket-server==0.4.2
+SimpleWebSocketServer==0.1.2
+six==1.16.0
+text-unidecode==1.3
