--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,7 @@
 
 TMUX_FZF_PREVIEW=0
 
-set-option -g default-terminal "xterm-256color"
+set-option -g default-terminal "tmux-256color"
 set-option -g escape-time 1
 if-shell '[ -z "$SSH_TTY" ] && [ -z "$SSH_CLIENT" ] && [ -z "$SSH_CONNECTION" ]' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s' ''
 #if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh -"' ''
@@ -84,22 +84,22 @@ set -g status-bg black
 #if-shell "[[ -n $TMUX_BORDER_BG ]]" 'set -g pane-border-bg $TMUX_BORDER_BG' ''
 #if-shell "[[ -n $TMUX_BORDER_FG_ACTIVE ]]" 'set -g pane-active-border-fg $TMUX_BORDER_FG_ACTIVE' ''
 #if-shell "[[ -n $TMUX_BORDER_BG_ACTIVE ]]" 'set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE' ''
-set-option -g message-command-style fg=colour232,bg=green,bold
-set-option -g message-style fg=green,bg=default,bold,underscore
+set-option -g message-command-style fg=color18,bg=color02,bold
+set-option -g message-style fg=color02,bg=default,bold,underscore
 
-set-option -gw mode-style fg=colour232,bg=yellow
+set-option -gw mode-style fg=color18,bg=color03
 
 #More advanced styles
 setw -g window-status-format \
-  "#[fg=white,bold]#{window_name}#[default]"
+  "#[fg=color19,bold]#{window_name}#[default]"
 
 setw -g window-status-current-format \
-  "#[fg=yellow]#{?pane_synchronized,↔ ,}#[default]#[fg=red,underscore,bold]#{window_name}#[default]#[fg=colour8]#{?window_zoomed_flag, (z),}#[default]"
+  "#[fg=yellow]#{?pane_synchronized,↔ ,}#[default]#[fg=color09,underscore,bold]#{window_name}#[default]#[fg=color08]#{?window_zoomed_flag, (z),}#[default]"
 
 setw -g window-status-separator "  "
 
 setw -g status-left \
-  '#[bold]#{?client_prefix,#[bg=green],#[bg=default]}#{?client_prefix,#[fg=colour232],#[fg=yellow]} #{session_name} #[default,bold]#{?client_prefix,#[fg=green],#[fg=yellow]}>>  '
+  '#[bold]#{?client_prefix,#[bg=color10],#[bg=default]}#{?client_prefix,#[fg=color18],#[fg=color11]} #{session_name} #[default,bold]#{?client_prefix,#[fg=color10],#[fg=color11]}>>  '
 
 setw -g pane-border-status top
 
@@ -107,16 +107,16 @@ setw -g pane-border-status top
 
 #setw -g pane-border-format '-'
 set -sg pane-border-format \
-  '#{?pane_active,#[reverse],#[fg=green]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{?pane_active,#[bold],}#{pane_current_command} | #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") #[default]]'
+  '#{?pane_active,#[bg=color16],#[fg=color16]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{?pane_active,#[bold],#[fg=color19]}#{pane_current_command} | #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") #[default]]'
 
 setw -g status-right '#[fg=green]#(gpmdp-tmux 2>/dev/null)#[default]'
 
 #bind-key C-s send-prefix
 
 # Window Management
-bind-key c-w choose-window -F "#{window_index}: #{window_name}" "swap-window -t %1"
-bind-key m choose-window -F "#{window_index}: #{window_name}" "join-pane -h -t %%"
-bind-key M choose-window -F "#{window_index}: #{window_name}" "join-pane -v -t %%"
+bind-key c-w choose-window -F "Swap with #{window_index}: #{window_name}" "swap-window -t %1"
+bind-key m choose-window -F "Join horizontal with #{window_index}: #{window_name}" "join-pane -h -t %%"
+bind-key M choose-window -F "Join vertical with #{window_index}: #{window_name}" "join-pane -v -t %%"
 bind-key -r / swap-pane
 bind-key & set-window-option synchronize-panes
 
@@ -137,7 +137,7 @@ set-option -g visual-bell off
 
 set -g display-panes-time 3000
 
-set -g clock-mode-colour colour29
+set -g clock-mode-colour color10
 
 set -g status-left-length 100
 set -g status-right-length 100
@@ -154,5 +154,5 @@ set-option -g display-time 3000
 bind-key X confirm-before -p "Kill window #W? (y/n)" kill-window
 
 set -sa terminal-overrides ',*:ed@'
-setw -g window-style fg=colour240
-setw -g window-active-style fg=white
+setw -g window-style fg=color08
+setw -g window-active-style fg=color07
