--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -75,7 +75,7 @@ bind Enter copy-mode
 
 # Basic styles
 set -g status-interval 5
-set -g status-bg black
+set -g status-bg color00
 #set -g pane-active-border-fg colour42
 #set -g pane-active-border-fg yellow
 #set -g pane-border-fg colour8
@@ -84,10 +84,10 @@ set -g status-bg black
 #if-shell "[[ -n $TMUX_BORDER_BG ]]" 'set -g pane-border-bg $TMUX_BORDER_BG' ''
 #if-shell "[[ -n $TMUX_BORDER_FG_ACTIVE ]]" 'set -g pane-active-border-fg $TMUX_BORDER_FG_ACTIVE' ''
 #if-shell "[[ -n $TMUX_BORDER_BG_ACTIVE ]]" 'set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE' ''
-set-option -g message-command-style fg=color18,bg=color02,bold
-set-option -g message-style fg=color02,bg=default,bold,underscore
+#set-option -g message-command-style fg=color18,bg=color02,bold
+#set-option -g message-style fg=color02,bg=default,bold,underscore
 
-set-option -gw mode-style fg=color18,bg=color03
+#set-option -gw mode-style fg=color05,bg=color02
 
 #More advanced styles
 setw -g window-status-format \
@@ -156,3 +156,5 @@ bind-key X confirm-before -p "Kill window #W? (y/n)" kill-window
 set -sa terminal-overrides ',*:ed@'
 setw -g window-style fg=color08
 setw -g window-active-style fg=color07
+
+set-option -gw mode-style fg=color07,bg=color19
