tmux: Disable fzf preview

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # vi:syntax=sh
 
-TMUX_FZF_PREVIEW=0
+TMUX_FZF_OPTIONS="-p -w 62% -h 38% -m --preview=''"
 
 set-option -g default-terminal "tmux-256color"
 set-option -g escape-time 1
