tmux: disable inactive window dimming

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -154,7 +154,7 @@ set-option -g display-time 3000
 bind-key X confirm-before -p "Kill window #W? (y/n)" kill-window
 
 set -sa terminal-overrides ',*:ed@'
-setw -g window-style fg=color08
-setw -g window-active-style fg=color07
+#setw -g window-style fg=color08
+#setw -g window-active-style fg=color07
 
 set-option -gw mode-style fg=color07,bg=color19
