tmux: update styling

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -66,6 +66,7 @@ bind -n C-l send-keys -R C-l \; clear-history
 setw -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe " pbcopy"
+bind-key -T copy-mode-vi c-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy"
 bind Enter copy-mode
@@ -91,10 +92,10 @@ set -g status-bg color00
 
 #More advanced styles
 setw -g window-status-format \
-  "#[fg=color19,bold]#{window_name}#[default]"
+  "#[bg=color19,fg=color00,bold] #{window_index} #[default] #[fg=color19,bold]#{window_name}#[default]"
 
 setw -g window-status-current-format \
-  "#[fg=yellow]#{?pane_synchronized,↔ ,}#[default]#[fg=color09,underscore,bold]#{window_name}#[default]#[fg=color08]#{?window_zoomed_flag, (z),}#[default]"
+  "#[fg=yellow]#[default]#[bg=color09,bold]#{?pane_synchronized, ↔,} #{window_index} #[default] #[fg=color09,underscore,bold]#{window_name}#[default]#[fg=color08]#{?window_zoomed_flag, (z),}#[default]"
 
 setw -g window-status-separator "  "
 
@@ -103,13 +104,13 @@ setw -g status-left \
 
 setw -g pane-border-status top
 
-#setw -g status-right '#[bg=yellow,fg=colour232]#{?pane_synchronized, ↔ ,}#[default]#[bg=cyan,fg=colour232]#{?window_zoomed_flag, ● ,}#[default]'
-
-#setw -g pane-border-format '-'
+setw -g pane-border-format ''
+setw -g pane-border-line heavy
 set -sg pane-border-format \
-  '#{?pane_active,#[bg=color16],#[fg=color16]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{?pane_active,#[bold],#[fg=color19]}#{pane_current_command} | #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") #[default]]'
+  '#{?pane_active,#[bg=color16],#[fg=color16]} #{pane_index} #[default]#{?pane_active,#[fg=colour6],}#{?pane_active,#[bold],#[fg=color19,bold]}#{?pane_active,,─[ #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") ]}#[default]'
 
-setw -g status-right '#[fg=green]#(gpmdp-tmux 2>/dev/null)#[default]'
+setw -g status-right '#[italics]#[bg=color04,fg=black] #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") #[default]'
+setw -g pane-border-indicators off
 
 #bind-key C-s send-prefix
 
