lazygit: Explicitly bind "Q" to quit lazygit (overrides default "q" alternative)

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -6,6 +6,6 @@ os:
   open: 'open {{filename}}'
 keybinding:
   universal:
-    quit: ''
+    quit: 'Q'
 git:
   mainBranches: ['master', 'main', 'live']
