--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -95,7 +95,7 @@ setw -g window-status-format \
   "#[bg=color19,fg=color00,bold] #{window_index} #[default] #[fg=color19,bold]#{window_name}#[default]"
 
 setw -g window-status-current-format \
-  "#[fg=yellow]#[default]#[bg=color09,bold]#{?pane_synchronized, ↔,} #{window_index} #[default] #[fg=color09,underscore,bold]#{window_name}#[default]#[fg=color08]#{?window_zoomed_flag, (z),}#[default]"
+  "#[fg=yellow]#[default]#[bg=color01,bold]#{?pane_synchronized, ↔,} #{window_index} #[default] #[fg=color01,underscore,bold]#{window_name}#[default]#[fg=color08]#{?window_zoomed_flag, (z),}#[default]"
 
 setw -g window-status-separator "  "
 
@@ -107,7 +107,7 @@ setw -g pane-border-status top
 setw -g pane-border-format ''
 setw -g pane-border-line heavy
 set -sg pane-border-format \
-  '#{?pane_active,#[bg=color16],#[fg=color16]} #{pane_index} #[default]#{?pane_active,#[fg=colour6],}#{?pane_active,#[bold],#[fg=color19,bold]}#{?pane_active,,─[ #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") ]}#[default]'
+  '#{?pane_active,#[bg=color16],#[fg=color16]} #{pane_index} #[default]#{?pane_active,#[fg=colour6],}#{?pane_active,#[bold],#[fg=color19,bold]}#[align=right]#{?pane_active,,─[ #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") ]}#[default]'
 
 setw -g status-right '#[italics]#[bg=color04,fg=black] #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") #[default]'
 setw -g pane-border-indicators off
